# Graphics

./: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: lantern.frag  lantern.vert
src/: lantern.cpp  lantern.hpp  lanternSystem.cpp  lanternSystem.hpp  main.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp
src/utilities/: window.cpp  window.hpp
